# travalho-c2-banco-de-dados

./: README.md  main.py  pyproject.toml  requirements.txt
src/apps/: interface.py
src/configs/: configs.py  menus.py
src/db/: conection.py
src/models/: cliente.py
src/utils/: manipula_terminal.py
