[project]
name = "trabalho-banco-de-dados"
version = "0.0.2"
description = "Trabalho desenvolvido com um tema referente ao gerenciamento de uma loja"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
